--- a/server/DJayy.vcxproj.filters
+++ b/server/DJayy.vcxproj.filters
@@ -10,17 +10,8 @@
     <Filter Include="src\Util">
       <UniqueIdentifier>{788ae085-89ff-42e7-9ac1-3047228846a6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="external">
-      <UniqueIdentifier>{c1d8e129-f39b-484e-b027-321114abf9dc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="external\jsoncpp">
-      <UniqueIdentifier>{3d42cc6e-df7e-428a-bb97-b8f45a03d936}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="external\jsoncpp\src">
-      <UniqueIdentifier>{ec541d29-502c-4b7f-8d21-16f832e422ff}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="external\jsoncpp\src\lib_json">
-      <UniqueIdentifier>{bf00e534-9270-472e-bece-6d638dbe4169}</UniqueIdentifier>
+    <Filter Include="src\DJayy\Programs">
+      <UniqueIdentifier>{c7967a3f-5385-4520-9d99-b04db758a240}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -33,14 +24,11 @@
     <ClCompile Include="src\Util\String.cpp">
       <Filter>src\Util</Filter>
     </ClCompile>
-    <ClCompile Include="external\jsoncpp\src\lib_json\json_value.cpp">
-      <Filter>external\jsoncpp\src\lib_json</Filter>
+    <ClCompile Include="src\DJayy\Programs\DummyProgram.cpp">
+      <Filter>src\DJayy\Programs</Filter>
     </ClCompile>
-    <ClCompile Include="external\jsoncpp\src\lib_json\json_writer.cpp">
-      <Filter>external\jsoncpp\src\lib_json</Filter>
-    </ClCompile>
-    <ClCompile Include="external\jsoncpp\src\lib_json\json_reader.cpp">
-      <Filter>external\jsoncpp\src\lib_json</Filter>
+    <ClCompile Include="src\DJayy\QueueTrack.cpp">
+      <Filter>src\DJayy</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -52,6 +40,15 @@
     </ClInclude>
     <ClInclude Include="src\Util\String.h">
       <Filter>src\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DJayy\ProgramInterface.h">
+      <Filter>src\DJayy</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DJayy\Programs\DummyProgram.h">
+      <Filter>src\DJayy\Programs</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DJayy\QueueTrack.h">
+      <Filter>src\DJayy</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
