--- a/server/DJayy.vcxproj.filters
+++ b/server/DJayy.vcxproj.filters
@@ -28,6 +28,9 @@
     <Filter Include="external\taglib">
       <UniqueIdentifier>{799a69e2-d30b-40a5-aec5-55d2c4f8104f}</UniqueIdentifier>
     </Filter>
+    <Filter Include="external\sqlite">
+      <UniqueIdentifier>{a000c434-0bda-46e2-a7d0-436ba119a9ff}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -368,6 +371,9 @@
     </ClCompile>
     <ClCompile Include="src\DJayy\Programs\WinampChecker.cpp">
       <Filter>src\DJayy\Programs</Filter>
+    </ClCompile>
+    <ClCompile Include="external\sqlite\sqlite3.c">
+      <Filter>external\sqlite</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -724,6 +730,12 @@
     </ClInclude>
     <ClInclude Include="src\DJayy\Programs\WinampChecker.h">
       <Filter>src\DJayy\Programs</Filter>
+    </ClInclude>
+    <ClInclude Include="external\sqlite\sqlite3ext.h">
+      <Filter>external\sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="external\sqlite\sqlite3.h">
+      <Filter>external\sqlite</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
