--- a/server/DJayy.vcxproj
+++ b/server/DJayy.vcxproj
@@ -123,7 +123,9 @@
     <ClCompile Include="src\DJayy\Queue\UserVote.cpp" />
     <ClCompile Include="src\DJayy\Queue\UserVoteList.cpp" />
     <ClCompile Include="src\DJayy\WebServer.cpp" />
+    <ClCompile Include="src\Global.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Util\PrefManager.cpp" />
     <ClCompile Include="src\Util\String.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -245,7 +247,9 @@
     <ClInclude Include="src\DJayy\Queue\UserVote.h" />
     <ClInclude Include="src\DJayy\Queue\UserVoteList.h" />
     <ClInclude Include="src\DJayy\WebServer.h" />
+    <ClInclude Include="src\Global.h" />
     <ClInclude Include="src\Util\ArrayList.h" />
+    <ClInclude Include="src\Util\PrefManager.h" />
     <ClInclude Include="src\Util\String.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
