Some slight UI tweaks

--- a/server/DJayy.vcxproj
+++ b/server/DJayy.vcxproj
@@ -319,6 +319,7 @@
       <AdditionalDependencies>Psapi.lib;libboost_system-vc120-s-1_57.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
