--- a/server/DJayy.vcxproj
+++ b/server/DJayy.vcxproj
@@ -11,14 +11,28 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\djayy\WebServer.cpp" />
+    <ClCompile Include="src\djayy\DJayy.cpp" />
+    <ClCompile Include="src\djayy\media\MediaSource.cpp" />
+    <ClCompile Include="src\djayy\media\Playable.cpp" />
+    <ClCompile Include="src\djayy\media\Playlist.cpp" />
+    <ClCompile Include="src\djayy\media\TrackInfo.cpp" />
+    <ClCompile Include="src\djayy\queue\UserVote.cpp" />
+    <ClCompile Include="src\djayy\WebUtils.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DJayy.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\djayy\WebServer.h" />
+    <ClInclude Include="src\djayy\DJayy.h" />
+    <ClInclude Include="src\djayy\media\MediaSource.h" />
+    <ClInclude Include="src\djayy\media\Playable.h" />
+    <ClInclude Include="src\djayy\media\PlayableListener.h" />
+    <ClInclude Include="src\djayy\media\Playlist.h" />
+    <ClInclude Include="src\djayy\media\PlaylistListener.h" />
+    <ClInclude Include="src\djayy\media\TrackInfo.h" />
+    <ClInclude Include="src\djayy\queue\UserVote.h" />
+    <ClInclude Include="src\djayy\WebUtils.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4593405B-5DB4-4D96-909B-48CC0B26800F}</ProjectGuid>
@@ -61,9 +75,10 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>BOOST_SPIRIT_THREADSAFE;WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_SPIRIT_THREADSAFE;WIN32;_WIN32_WINNT=0x0501;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>/local/boost;external/Simple-Web-Server;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -80,9 +95,10 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>BOOST_SPIRIT_THREADSAFE;WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>BOOST_SPIRIT_THREADSAFE;WIN32;_WIN32_WINNT=0x0501;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>/local/boost;external/Simple-Web-Server;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -91,6 +107,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>/local/boost/lib32-msvc-12.0;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libboost_system-vc120-s-1_57.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
